Verbessere Video-Layout

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -602,9 +602,9 @@
                     <button id="ocrReset" class="btn btn-danger">Reset</button>
                 </div>
             </section>
-            <section id="ocrResultPanel" class="ocr-panel hidden">
+            <section id="ocrResultPanel" class="ocr-panel">
                 <canvas id="roiPreview"></canvas>
-                <div id="ocrText"></div>
+                <div id="ocrText">Noch kein OCR-Ergebnis</div>
                 <div class="ocr-controls">
                     <span id="gpuInfo">GPU: unbekannt</span>
                     <button id="ocrStart">Start OCR</button>
