--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -563,7 +563,7 @@
                 </div>
                 <button id="closeVideoDlg" class="btn btn-danger">❌ Schließen</button>
             </section>
-            <section id="videoPlayerSection" class="video-player-section collapsed">
+            <section id="videoPlayerSection" class="video-player-section hidden">
                 <div class="player-header"><span id="playerDialogTitle"></span></div>
                 <iframe id="videoPlayerFrame" allow="autoplay; fullscreen"></iframe>
                 <div id="playerControls" class="player-controls">
