--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -535,7 +535,7 @@
     <!-- Video-Manager mit integriertem Player -->
     <dialog id="videoMgrDialog" class="video-dialog">
         <div class="wb-grid">
-            <section class="video-list-section">
+            <section id="videoListSection" class="video-list-section">
                 <h2>📼 Gespeicherte Videos</h2>
                 <div class="video-toolbar">
                     <div class="video-search">
@@ -602,7 +602,7 @@
                     <button id="ocrReset" class="btn btn-danger">Reset</button>
                 </div>
             </section>
-            <section id="ocrResultPanel" class="ocr-panel">
+            <section id="ocrOutputSection" class="ocr-panel">
                 <canvas id="roiPreview"></canvas>
                 <div id="ocrText">Noch kein OCR-Ergebnis</div>
                 <div class="ocr-controls">
