--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -115,6 +115,7 @@
                     <button class="btn btn-secondary" onclick="openSegmentDialog()">🔊 Audio-Datei zuordnen</button>
                     <button class="btn btn-secondary" onclick="showZipImportDialog()">ZIP importieren</button>
                     <button id="copyAssistantButton" class="btn btn-secondary">Kopierhilfe</button>
+                    <button id="copyAssistant2Button" class="btn btn-secondary">Kopierhilfe 2</button>
                     <button id="copyAllEmosButton" class="btn btn-secondary">Emotionen kopieren</button>
                 </div>
                 <div class="sort-controls">
@@ -788,6 +789,24 @@
         </div>
     </div>
 
+    <!-- Copy Assistant 2 Dialog -->
+    <div class="dialog-overlay hidden" id="copyAssistant2Dialog">
+        <div class="dialog">
+            <button class="dialog-close-btn" onclick="closeCopyAssistant2()">×</button>
+            <h3>📋 Kopierhilfe 2</h3>
+            <div id="copyAssist2Content" style="text-align:center;">
+                <div id="copy2Name" style="font-size:24px; font-weight:bold; margin-bottom:10px;"></div>
+                <div id="copy2De" style="margin-bottom:10px;"></div>
+                <div id="copy2Emo" style="color:#999;"></div>
+            </div>
+            <div class="dialog-buttons">
+                <span id="copyAssist2Page" style="margin-right:auto"></span>
+                <button class="btn btn-secondary" onclick="closeCopyAssistant2()">Abbrechen</button>
+                <button class="btn btn-secondary" onclick="copyAssist2Prev()">Zurück</button>
+                <button class="btn btn-success" onclick="copyAssist2Next()">Weiter</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Audio Player -->
     <audio id="audioPlayer"></audio>
