--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -137,6 +137,8 @@
                 <div class="project-playback">
                     <button id="projectPlayPauseBtn" onclick="toggleProjectPlayback()">▶</button>
                     <button id="projectStopBtn" onclick="stopProjectPlayback()">⏹</button>
+                    <button id="numberPrevBtn" onclick="goToPreviousNumber()" title="Eine Nummer zurück">▲</button>
+                    <button id="numberNextBtn" onclick="goToNextNumber()" title="Eine Nummer weiter">▼</button>
                 </div>
             </div>
 
