--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -850,6 +850,7 @@
                 <legend>🚪 Nebenraum-Effekt</legend>
                 <label id="neighborToggleLabel" class="effect-toggle" title="Nebenraum-Effekt ein- oder ausschalten"><input type="checkbox" id="neighborToggle" onchange="toggleNeighborEffect(this.checked)"> Nebenraum-Effekt</label>
                 <label id="neighborHallToggleLabel" class="effect-toggle" title="Hall-Effekt ein- oder ausschalten"><input type="checkbox" id="neighborHallToggle" onchange="toggleNeighborHall(this.checked)"> Hall-Effekt</label>
+                <label id="tableMicToggleLabel" class="effect-toggle" title="Telefon-auf-Tisch-Effekt ein- oder ausschalten"><input type="checkbox" id="tableMicToggle" onchange="toggleTableMicEffect(this.checked)"> Telefon auf Tisch</label>
             </fieldset>
             </div> <!-- edit-right Ende -->
         </div> <!-- edit-flex Ende -->
@@ -860,6 +861,7 @@
                     <button id="radioEffectBtn" class="effect-btn" onclick="applyRadioEffect()" title="Funkgerät-Effekt anwenden">📻 Funkgerät-Effekt anwenden</button>
                     <button id="emiEffectBtn" class="effect-btn" onclick="applyEmiEffect()" title="EM-Störgeräusch anwenden">⚡ EM-Störgeräusch anwenden</button>
                     <button id="neighborEffectBtn" class="effect-btn" onclick="applyNeighborEffect()" title="Nebenraum-Effekt anwenden">🚪 Nebenraum-Effekt anwenden</button>
+                    <button id="tableMicEffectBtn" class="effect-btn" onclick="applyTableMicEffect()" title="Telefon-auf-Tisch-Effekt anwenden">📱 Telefon-auf-Tisch anwenden</button>
                     <button id="volumeMatchBtn" class="effect-btn" onclick="applyVolumeMatch()" title="Lautstärke an EN anpassen">🔊 Lautstärke angleichen</button>
                 </div>
                 <div class="dialog-buttons">
