Füge Schnellsprech-Option beim Emo-Kopieren hinzu

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -153,6 +153,7 @@
                     <label class="copy-option"><input type="checkbox" id="restTranslationCheckbox"> Reste-Modus</label>
                     <label class="copy-option"><input type="checkbox" id="copyIncludeTime" checked> Zeit voranstellen</label>
                     <label class="copy-option"><input type="checkbox" id="copyAddDashes"> --- anhängen</label>
+                    <label class="copy-option"><input type="checkbox" id="copyAddExtremeSpeed"> „extrem schnell reden“ ergänzen</label>
                 </div>
                 <div class="sort-controls">
                     <span style="color: #999;">Sortierung:</span>
