--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -713,43 +713,28 @@
                     <div class="quick-actions" aria-label="Schnellzugriff auf häufige Werkzeuge">
                         <div class="quick-header">
                             <h4 class="section-headline">Schnellzugriff</h4>
-                            <p class="quick-subheadline">Die wichtigsten Schritte liegen als farbige Karten bereit und markieren die passenden Detailbereiche.</p>
+                            <p class="quick-subheadline">Die wichtigsten Schritte stehen als kompakte Buttons bereit und markieren beim Klick die passenden Detailbereiche.</p>
                         </div>
-                        <div class="quick-grid">
-                            <button id="quickFocusTrim" class="quick-btn" type="button" title="Trimmbereiche bearbeiten">
+                        <div class="quick-toolbar" role="toolbar" aria-label="Schnellzugriffswerkzeuge">
+                            <button id="quickFocusTrim" class="quick-btn" type="button" title="Trimmbereiche bearbeiten" aria-label="Trimmbereiche bearbeiten">
                                 <span class="quick-icon" aria-hidden="true">✂️</span>
-                                <span class="quick-label">
-                                    <span class="quick-title">Trimmen</span>
-                                    <span class="quick-desc">Start und Ende präzise setzen</span>
-                                </span>
+                                <span class="quick-text">Trim</span>
                             </button>
-                            <button id="quickAutoTrim" class="quick-btn" type="button" title="Stille automatisch erkennen">
+                            <button id="quickAutoTrim" class="quick-btn" type="button" title="Stille automatisch erkennen" aria-label="Stille automatisch erkennen">
                                 <span class="quick-icon" aria-hidden="true">⚡</span>
-                                <span class="quick-label">
-                                    <span class="quick-title">Auto-Trim</span>
-                                    <span class="quick-desc">Leise Bereiche automatisch kürzen</span>
-                                </span>
+                                <span class="quick-text">Auto</span>
                             </button>
-                            <button id="quickTempoMatch" class="quick-btn" type="button" title="Tempo automatisch auf EN-Zeit anpassen">
+                            <button id="quickTempoMatch" class="quick-btn" type="button" title="Tempo automatisch auf EN-Zeit anpassen" aria-label="Tempo automatisch auf EN-Zeit anpassen">
                                 <span class="quick-icon" aria-hidden="true">⏱️</span>
-                                <span class="quick-label">
-                                    <span class="quick-title">Tempo angleichen</span>
-                                    <span class="quick-desc">Passt die Länge an das EN-Original an</span>
-                                </span>
+                                <span class="quick-text">Tempo</span>
                             </button>
-                            <button id="quickVolumeMatch" class="quick-btn" type="button" title="Lautstärke an EN anpassen">
+                            <button id="quickVolumeMatch" class="quick-btn" type="button" title="Lautstärke an EN anpassen" aria-label="Lautstärke an EN anpassen">
                                 <span class="quick-icon" aria-hidden="true">🔊</span>
-                                <span class="quick-label">
-                                    <span class="quick-title">Lautstärke</span>
-                                    <span class="quick-desc">Pegel mit dem Original vergleichen</span>
-                                </span>
+                                <span class="quick-text">Pegel</span>
                             </button>
-                            <button id="quickRadioEffect" class="quick-btn" type="button" title="Funkgerät-Effekt anwenden">
+                            <button id="quickRadioEffect" class="quick-btn" type="button" title="Funkgerät-Effekt anwenden" aria-label="Funkgerät-Effekt anwenden">
                                 <span class="quick-icon" aria-hidden="true">📻</span>
-                                <span class="quick-label">
-                                    <span class="quick-title">Funkgerät</span>
-                                    <span class="quick-desc">Preset öffnen und Effekt anwenden</span>
-                                </span>
+                                <span class="quick-text">Funk</span>
                             </button>
                         </div>
                     </div>
