--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -946,20 +946,10 @@
             </div> <!-- edit-layout Ende -->
 
 
-            <!-- Untere Leiste: Effekt-Toolbar links, Aktionen rechts -->
-            <div class="edit-bottom">
-                <div class="effect-toolbar">
-                    <button id="radioEffectBtn" class="effect-btn" onclick="applyRadioEffect()" title="Funkgerät-Effekt anwenden">📻 Funkgerät-Effekt anwenden</button>
-                    <button id="emiEffectBtn" class="effect-btn" onclick="applyEmiEffect()" title="EM-Störgeräusch anwenden">⚡ EM-Störgeräusch anwenden</button>
-                    <button id="neighborEffectBtn" class="effect-btn" onclick="applyNeighborEffect()" title="Nebenraum-Effekt anwenden">🚪 Nebenraum-Effekt anwenden</button>
-                    <button id="tableMicEffectBtn" class="effect-btn" onclick="applyTableMicEffect()" title="Telefon-auf-Tisch-Effekt anwenden">📱 Telefon-auf-Tisch anwenden</button>
-                    <button id="volumeMatchBtn" class="effect-btn" onclick="applyVolumeMatch()" title="Lautstärke an EN anpassen">🔊 Lautstärke angleichen</button>
-                </div>
-                <div class="dialog-buttons">
-                    <button class="btn btn-secondary" onclick="resetDeEdit()" title="Letzte Speicherung wiederherstellen">Zurücksetzen</button>
-                    <button class="btn btn-blue" onclick="applyDeEdit()" title="Bearbeitung speichern">Speichern</button>
-                    <button class="btn btn-secondary" onclick="closeDeEdit()" title="Fenster schließen">Abbrechen</button>
-                </div>
+            <!-- Schlanke Fußleiste nur mit Zurücksetzen/Speichern -->
+            <div class="edit-footer">
+                <button class="btn btn-secondary" onclick="resetDeEdit()" title="Letzte Speicherung wiederherstellen">Zurücksetzen</button>
+                <button class="btn btn-blue" onclick="applyDeEdit()" title="Bearbeitung speichern">Speichern</button>
             </div>
         </div>
     </div>
