Allow saving DE edits without closing dialog

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -1013,7 +1013,8 @@
             <!-- Schlanke Fußleiste nur mit Zurücksetzen/Speichern -->
             <div class="edit-footer">
                 <button class="btn btn-secondary" onclick="resetDeEdit()" title="Letzte Speicherung wiederherstellen">Zurücksetzen</button>
-                <button class="btn btn-blue" onclick="applyDeEdit()" title="Bearbeitung speichern">Speichern</button>
+                <button class="btn btn-blue" onclick="applyDeEdit()" title="Bearbeitung speichern und geöffnet lassen">Speichern</button>
+                <button class="btn btn-primary" onclick="applyDeEdit(true)" title="Speichern und den Dialog schließen">Speichern &amp; schließen</button>
             </div>
         </div>
     </div>
